# LLM-Wiki-Claude-Multimodal

./: .gitignore  README.md  llm-wiki-測試題答案.md  questions+for+llm+wiki.docx
.claude/skills/llm-wiki/: PACKAGING.md  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml
.claude/skills/llm-wiki/scripts/: caption_cache.py
.claude/skills/llm-wiki/src/llm_wiki/: __init__.py  caption_cache.py  cli.py  convert.py  images.py
wiki/: SCHEMA.md  index.md  log.md
wiki/.llm-wiki/: image-caption-cache.json
wiki/concepts/: ai-agent-meeting-scenarios.md  data-coe-2025-priorities.md  einvoice-barcode-spec.md  procurement-management-policy.md
wiki/entities/: data-coe.md  mof-fiscal-information-center.md  procurement-department.md  taiwan-mobile.md
wiki/raw/articles/: data-coe-2025.md  data-coe-2025.pptx  meeting-scenarios.md  meeting-scenarios.xlsx
wiki/raw/papers/: einvoice-barcode-spec.md  procurement-management-policy.md
