[project]
name = "llm-wiki"
version = "2.2.0"
description = "CLI for the llm-wiki Claude skill: pure-Python doc->Markdown conversion, image extraction, and SHA-256 caption caching. No system binaries (no markitdown / poppler / pandoc)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pymupdf>=1.24",       # PDF text + embedded-image extraction
    "python-pptx>=0.6.23", # PPTX text + tables
    "python-docx>=1.1",    # DOCX text + tables
    "pandas>=2.0",         # XLSX/CSV -> tables
    "openpyxl>=3.1",       # pandas xlsx engine
    "tabulate>=0.9",       # DataFrame.to_markdown()
    "markdownify>=0.11",   # HTML -> Markdown
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]
